Parit paikkaukset edelliseen committiin. :)

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>EoS-Addressbook2 </name>
+	<name>EoS-Addressbook</name>
 	<comment></comment>
 	<projects>
 	</projects>
